[package]
name = "hline"
version = "0.1.0"
edition = "2021"
description = "a grep-like tool that highlights lines in files"
license-file = "LICENSE.md"
readme = "README.md"
repository = "https://github.com/ollien/hline"
homepage = "https://github.com/ollien/hline"

[dependencies]
grep = "0.2"
thiserror = "1"
termion = "1"
clap = "2.33"

[dev-dependencies]
test-case = "1.2.1"
stringreader = "0.1"
